force-app/main/default/objects/Applicant__c/fields/Ownership_Real_Estate_Rental__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Real_Estate_Rental__c</fullName>
    <label>Ownership % - Real Estate Rental I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>