force-app/main/default/objects/Applicant__c/fields/Pension__c.field-meta.xml
<CustomField>
    <fullName>Pension__c</fullName>
    <label>Pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>