force-app/main/default/objects/Applicant__c/fields/Pension_IRS_Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Pension_IRS_Total_Contribution__c</fullName>
    <label>Total Pension Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>