force-app/main/default/objects/Applicant__c/fields/PensionC__c.field-meta.xml
<CustomField>
    <fullName>PensionC__c</fullName>
    <formula>Pension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PensionC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>