force-app/main/default/objects/Applicant__c/fields/Performance_Based_Pay_Includes_Commissi__c.field-meta.xml
<CustomField>
    <fullName>Performance_Based_Pay_Includes_Commissi__c</fullName>
    <description>(Includes Commission, Overtime Bonus)</description>
    <label>Performance-Based Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>