force-app/main/default/objects/Applicant__c/fields/Performance_Based_PayC__c.field-meta.xml
<CustomField>
    <fullName>Performance_Based_PayC__c</fullName>
    <formula>Performance_Based_Pay_Includes_Commissi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance-Based PayC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>