force-app/main/default/objects/Applicant__c/fields/Personal_Expenses_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Personal_Expenses_Monthly_Prior_Loan__c</fullName>
    <label>Personal Expenses Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>