force-app/main/default/objects/Applicant__c/fields/Personal_Insurance_Monthly_Prior_to_Loan__c.field-meta.xml
<CustomField>
    <fullName>Personal_Insurance_Monthly_Prior_to_Loan__c</fullName>
    <label>Personal Insurance Monthly Prior to Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>