force-app/main/default/objects/Applicant__c/fields/Petrol_Fuel_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Petrol_Fuel_Monthly_Prior_Loan__c</fullName>
    <label>Petrol/Fuel Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>