force-app/main/default/objects/Applicant__c/fields/Primary_Relationship_Tier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Tier__c</fullName>
    <label>Primary Relationship Tier</label>
    <type>Picklist</type>
</CustomField>