force-app/main/default/objects/Applicant__c/fields/Projected_Real_Estate_Rental__c.field-meta.xml
<CustomField>
    <fullName>Projected_Real_Estate_Rental__c</fullName>
    <label>Projected Real Estate Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>