force-app/main/default/objects/Applicant__c/fields/Projected_Real_Estate_RentalC__c.field-meta.xml
<CustomField>
    <fullName>Projected_Real_Estate_RentalC__c</fullName>
    <formula>Projected_Real_Estate_Rental__c * 0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Real Estate RentalC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>