force-app/main/default/objects/Applicant__c/fields/Property_Insurance_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance_Monthly_Prior_Loan__c</fullName>
    <label>Property Insurance Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>