force-app/main/default/objects/Applicant__c/fields/Property_Maintenance_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>Property_Maintenance_Monthly_After_Loan__c</fullName>
    <label>Property Maintenance Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>