force-app/main/default/objects/Applicant__c/fields/Property_Maintenance_Monthly_Prior_loan__c.field-meta.xml
<CustomField>
    <fullName>Property_Maintenance_Monthly_Prior_loan__c</fullName>
    <label>Property Maintenance Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>