force-app/main/default/objects/Applicant__c/fields/Real_Estate_Market_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Market_Value_Number__c</fullName>
    <label>Real Estate Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>