force-app/main/default/objects/Applicant__c/fields/Rent_Board_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Rent_Board_Monthly_Prior_Loan__c</fullName>
    <label>Rent/Board Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>