force-app/main/default/objects/Applicant__c/fields/Rent_Board_Strata_Before_TDSR__c.field-meta.xml
<CustomField>
    <fullName>Rent_Board_Strata_Before_TDSR__c</fullName>
    <formula
  >If  (RecordType.DeveloperName = &quot;Short_Summary_of_Income&quot;,  Rent_Strata_Maintenance__c , (Rent_Board_Monthly_Prior_Loan__c +  Strata_Maintenance_Monthly_Prior_Loan__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent &amp; Board Strata Before TDSR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>