force-app/main/default/objects/Applicant__c/fields/Rent_Strata_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Rent_Strata_Maintenance__c</fullName>
    <label>Rent/Strata Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>