force-app/main/default/objects/Applicant__c/fields/Rim_Number__c.field-meta.xml
<CustomField>
    <fullName>Rim_Number__c</fullName>
    <description>Used to store the Rim Number for an Applicsnt</description>
    <label>Rim Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>