force-app/main/default/objects/Applicant__c/fields/Salaried__c.field-meta.xml
<CustomField>
    <fullName>Salaried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salaried</label>
    <type>Checkbox</type>
</CustomField>