force-app/main/default/objects/Applicant__c/fields/Salary_and_Allowances_as_per_pay_slips__c.field-meta.xml
<CustomField>
    <fullName>Salary_and_Allowances_as_per_pay_slips__c</fullName>
    <label>Salary and Allowances (as per pay slips,</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>