force-app/main/default/objects/Applicant__c/fields/Salary_and_AllowancesC__c.field-meta.xml
<CustomField>
    <fullName>Salary_and_AllowancesC__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary and AllowancesC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>