force-app/main/default/objects/Applicant__c/fields/Sanction_Screening_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Screening_Completed__c</fullName>
    <label>Sanction Screening Completed</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>