force-app/main/default/objects/Applicant__c/fields/Sanction_Screening_has_Negative_Trace__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Screening_has_Negative_Trace__c</fullName>
    <label>Sanction Screening has Negative Trace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>