force-app/main/default/objects/Applicant__c/fields/Savings_Pension_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Savings_Pension_Insurance_Number__c</fullName>
    <label>Savings/Pension/Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>