force-app/main/default/objects/Applicant__c/fields/School_Costs_Monthly_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>School_Costs_Monthly_After_Loan__c</fullName>
    <label>School Costs Monthly After Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>