force-app/main/default/objects/Applicant__c/fields/Share_of_Profit_PartnershipC__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Profit_PartnershipC__c</fullName>
    <formula>Share_of_Profit_Partnership__c * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share of Profit - PartnershipC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>