force-app/main/default/objects/Applicant__c/fields/Share_of_Profit_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Profit_Shareholder__c</fullName>
    <label>Share of Profit - Shareholder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>