force-app/main/default/objects/Applicant__c/fields/Share_of_Profit_ShareholderC__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Profit_ShareholderC__c</fullName>
    <formula>Share_of_Profit_Shareholder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share of Profit - ShareholderC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>