force-app/main/default/objects/Applicant__c/fields/Statutory_Deductions_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Statutory_Deductions_Numbers__c</fullName>
    <label>Statutory Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>