force-app/main/default/objects/Applicant__c/fields/Strata_Maintenance_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Strata_Maintenance_Monthly_Prior_Loan__c</fullName>
    <label>Strata Maintenance Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>