force-app/main/default/objects/Applicant__c/fields/Time_as_Member_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_as_Member_Months__c</fullName>
    <label>Time as Member Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>