force-app/main/default/objects/Applicant__c/fields/Toll_Fees_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Toll_Fees_Monthly_Prior_Loan__c</fullName>
    <label>Toll/Fees Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>