force-app/main/default/objects/Applicant__c/fields/Total_Amount_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Consolidated__c</fullName>
    <label>Total Amount Consolidated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>