force-app/main/default/objects/Applicant__c/fields/Total_Inflows__c.field-meta.xml
<CustomField>
    <fullName>Total_Inflows__c</fullName>
    <formula>IF (RecordType.Name = &quot;Full Details Of Income/Living Expenses&quot;,  
   (Gross_Monthly_IncomeC__c -  (Income_Tax_Monthly_Payment_Prior_Loan__c +  NIS_Contribution_Monthly_Prior_Loan__c +  NHT_Contributions_Monthly_Prior_Loan__c +  Education_Tax_Monthly_Prior_Loan__c  )), 

IF ( RecordType.Name = &quot;Short Summary of Income&quot;, 
    Gross_Monthly_IncomeC__c +  Other_Income__c , 0  )  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inflows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>