force-app/main/default/objects/Applicant__c/fields/Total_Monthly_Income_Calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Income_Calc__c</fullName>
    <formula>CASE(Primary_Source_of_Income_List__c,
  &quot;Gross Salary and Allowances&quot;, Gross_Monthly_Income__c,
  &quot;Other Income (Bonuses, Gratuities, Dividends, Performance-Based Incentives, Alimony, Remittances)&quot;, Other_Income__c,
  &quot;Net  Business Income - Sole Trader&quot;, Net_Profit_Sole_Trader__c,
  &quot;Director&apos;s Emoluments - Director&quot;, Director_s_Emoluments_Director__c,
  &quot;Net  Business Income - Partnership&quot;, Share_of_Profit_Partnership__c,
  &quot;Net  Business Income - Company Shareholding&quot;, Share_of_Profit_Shareholder__c,
  &quot;Pension&quot;, Pension__c,
  &quot;Property Rental&quot;, Existing_Real_Estate_Rental_I__c,
  0
) + Total_Other_Income_Calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>