force-app/main/default/objects/Applicant__c/fields/Total_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Payment__c</fullName>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>