force-app/main/default/objects/Applicant__c/fields/Total_Outflows__c.field-meta.xml
<CustomField>
    <fullName>Total_Outflows__c</fullName>
    <formula>IF ( RecordType.Name = &quot;Short Summary of Income&quot;, Monthly_Living_Expenses__c, 

IF ( RecordType.Name = &quot;Full Details Of Income/Living Expenses&quot;, 
 (Property_Tax_Monthly_Prior_Loan__c +
 Property_Insurance_Monthly_Prior_Loan__c +
 Property_Maintenance_Monthly_Prior_loan__c +
 Personal_Expenses_Monthly_Prior_Loan__c +
 Food_Cost_Monthly_Prior_Loan__c +
 Child_Care_Costs_Monthly_Prior_Loan__c +
 School_Costs_Monthly_Prior_Loan__c +
 Health_Costs_Monthly_Prior_Loan__c +
 Other_Personal_Family_Monthly_Prior_Loan__c +
 Electricity_Monthly_Prior_Loan__c  +
 Water_Monthly_Prior_Loan__c +
 Cell_Phone_Landline_Monthly_Prior_Loan__c +
 Internet_Cable_Monthly_Prior_Loan__c +
 Cooking_Gas_Monthly_Prior_Loan__c +
 House_Keeping_Monthly_Prior_Loan__c +
 Other_Utilities_Monthly_Prior_Loan__c +
 Fares_Monthly_Prior_Loan__c +
 Petrol_Fuel_Monthly_Prior_Loan__c +
 Toll_Fees_Monthly_Prior_Loan__c +
 Motor_V_Insurance_Monthly_Prior_Loan__c +
 Motor_Vehicle_Reg_Monthly_Prior_Loan__c +
 Motor_Vehicle_Fitness_Monthly_Prior_Loan__c +
 Motor_V_Maintenance_Monthly_Before_Loan__c +
 Other_Transport_Costs_Monthly_Prior_Loan__c ),0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outflows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>