force-app/main/default/objects/Applicant__c/fields/Total_unsecured_Balance_Installment_and__c.field-meta.xml
<CustomField>
    <fullName>Total_unsecured_Balance_Installment_and__c</fullName>
    <description>Total unsecured Balance (Installment and revolving)</description>
    <label>Total unsecured Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>