force-app/main/default/objects/Applicant__c/fields/Water_Monthly_Prior_Loan__c.field-meta.xml
<CustomField>
    <fullName>Water_Monthly_Prior_Loan__c</fullName>
    <label>Water Monthly Prior Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>