force-app/main/default/objects/Applicant__c/recordTypes/Empty_Application.recordType-meta.xml
<RecordType>
    <fullName>Empty_Application</fullName>
    <active>true</active>
    <description>Represents an application that is blank and contains no info</description>
    <label>Empty Application</label>
</RecordType>