force-app/main/default/objects/Applicant__c/recordTypes/Full_Details_Of_Income_Living_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Full_Details_Of_Income_Living_Expenses</fullName>
    <active>true</active>
    <label>Full Details Of Income/Living Expenses</label>
</RecordType>