force-app/main/default/objects/Applicant__c/recordTypes/Short_Summary_of_Income.recordType-meta.xml
<RecordType>
    <fullName>Short_Summary_of_Income</fullName>
    <active>true</active>
    <label>Short Summary of Income</label>
</RecordType>