force-app/main/default/objects/Applicant__c/validationRules/Directors_emoluments.validationRule-meta.xml
<ValidationRule>
    <fullName>Directors_emoluments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Applicable_sources_of_income__c , &quot;Director&apos;s Emoluments (Director)&quot;),ISBLANK(Director_s_Emoluments_Director__c))</errorConditionFormula>
    <errorMessage>Director&apos;s Emoluments (Director) is required</errorMessage>
</ValidationRule>