force-app/main/default/objects/Applicant__c/validationRules/Gratuity_in_lieu_of_Pension.validationRule-meta.xml
<ValidationRule>
    <fullName>Gratuity_in_lieu_of_Pension</fullName>
    <active>false</active>
    <errorConditionFormula
  >AND(INCLUDES(Applicable_sources_of_income__c , &quot;Salary&quot;), OR(Gratuity_in_lieu_of_Pension__c &lt;1,ISBLANK(Gratuity_in_lieu_of_Pension__c)))</errorConditionFormula>
    <errorMessage>Gratuity in lieu of Pension  is cannot be blank</errorMessage>
</ValidationRule>