force-app/main/default/objects/Applicant__c/validationRules/Net_Profit_Sole_Trader.validationRule-meta.xml
<ValidationRule>
    <fullName>Net_Profit_Sole_Trader</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(INCLUDES(Applicable_sources_of_income__c , &quot;Net Profit (Sole Trader)&quot;),ISBLANK(Net_Profit_Sole_Trader__c))</errorConditionFormula>
    <errorMessage>Net Profit (Sole Trader) is required</errorMessage>
</ValidationRule>