force-app/main/default/objects/Applicant__c/validationRules/Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Other</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(INCLUDES(Applicable_sources_of_income__c , &quot;Other&quot;),ISBLANK(Other_Income__c))</errorConditionFormula>
    <errorMessage>Other income is required</errorMessage>
</ValidationRule>