force-app/main/default/objects/Applicant__c/validationRules/Pension.validationRule-meta.xml
<ValidationRule>
    <fullName>Pension</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(INCLUDES(Applicable_sources_of_income__c , &quot;Pension&quot;),ISBLANK(Pension__c))</errorConditionFormula>
    <errorMessage>Pension is required</errorMessage>
</ValidationRule>