force-app/main/default/objects/Applicant__c/validationRules/Perfomance_based_Pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Perfomance_based_Pay</fullName>
    <active>false</active>
    <errorConditionFormula
  >AND(INCLUDES(Applicable_sources_of_income__c , &quot;Salary&quot;), OR(Performance_Based_Pay_Includes_Commissi__c &lt;1,ISBLANK(Performance_Based_Pay_Includes_Commissi__c)))</errorConditionFormula>
    <errorMessage>Performance Base pay  cannot be blank</errorMessage>
</ValidationRule>