force-app/main/default/objects/Applicant__c/validationRules/Project_Realestate_rental.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Realestate_rental</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Applicable_sources_of_income__c , &quot;Property Rental&quot;),ISBLANK(Projected_Real_Estate_Rental__c))</errorConditionFormula>
    <errorMessage>Projected Realestate  information is required</errorMessage>
</ValidationRule>