force-app/main/default/objects/Applicant__c/validationRules/Property_Rental_not_treated_as_business.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Rental_not_treated_as_business</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Applicable_sources_of_income__c , &quot;Property Rental&quot;),ISBLANK(Existing_Real_Estate_Rental_I__c))</errorConditionFormula>
    <errorMessage>Property Rental information is required</errorMessage>
</ValidationRule>