force-app/main/default/objects/Applicant__c/validationRules/Salary_and_Allowances_gp.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_and_Allowances_gp</fullName>
    <active>false</active>
    <errorConditionFormula>AND(INCLUDES(Applicable_sources_of_income__c , &quot;Salary&quot;), OR(Salary_and_Allowances_as_per_pay_slips__c&lt;1,ISBLANK(Salary_and_Allowances_as_per_pay_slips__c)),
OR(Gratuity_in_lieu_of_Pension__c &lt;1,ISBLANK(Gratuity_in_lieu_of_Pension__c)),
OR(Performance_Based_Pay_Includes_Commissi__c &lt;1,ISBLANK(Performance_Based_Pay_Includes_Commissi__c))
)</errorConditionFormula>
    <errorMessage>Salary and Allowance is cannot be blank</errorMessage>
</ValidationRule>