force-app/main/default/objects/Applicant__c/validationRules/Share_of_Profit_Partnership.validationRule-meta.xml
<ValidationRule>
    <fullName>Share_of_Profit_Partnership</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(INCLUDES(Applicable_sources_of_income__c , &quot;Share of Profits (Partnership)&quot;),ISBLANK(Share_of_Profit_Partnership__c))</errorConditionFormula>
    <errorMessage>Share of Profit (Partnership) is required</errorMessage>
</ValidationRule>