force-app/main/default/objects/Applicant__c/validationRules/Share_of_Profit_shareholder.validationRule-meta.xml
<ValidationRule>
    <fullName>Share_of_Profit_shareholder</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES(Applicable_sources_of_income__c , &quot;Share of Profits (Shareholder)&quot;),ISBLANK(Share_of_Profit_Shareholder__c))</errorConditionFormula>
    <errorMessage>Share of Profit (Shareholder) is required</errorMessage>
</ValidationRule>