force-app/main/default/objects/Applicant__c/listViews/Related_Opportunities.listView-meta.xml
<ListView>
    <fullName>Related_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Related Opportunities</label>
</ListView>